stop footer links from stretching forever

--- a/src/components/layout/footer.module.scss
+++ b/src/components/layout/footer.module.scss
@@ -26,6 +26,8 @@
 
     a {
       grid-column: 2;
+      display: inline-block;
+      width: fit-content;
     }
 
     &.email {
